<resources>
    <string name="app_name">MusicX</string>
    <string name="music_text">MusicX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="about">About</string>
    <string name="tabs_text">Tabs</string>
    <string name="ai_to_shu_hokages_furneral_from_naruto">Ai to Shu - Hokages Furneral - From Naruto</string>
    <string name="todo">TODO</string>
    <string name="rmaster">RMaster</string>
    <string name="play_pause_button_desc">Play Pause Button</string>
    <string name="next_button_description">Next Button</string>
    <string name="angle_down_button_description">This is angle downbutton to dissmiss bottom sheet</string>
    <string name="three_dot_bottomSheet_description">this is the three dot button in bottom sheet</string>
    <string name="on_repeat">On Repeat</string>
    <string name="shuffle_button_description">This is the shuffle button</string>
    <string name="backward_button_description">This is backward button</string>
    <string name="playpause_button_description">This is play pause button</string>
    <string name="forward_btuton_description">This is forward button description</string>
    <string name="loop_button_description">This is loop button</string>
    <string name="three_line_description">This is the three lines button in main music player</string>
    <string name="share_button_description">This is the share button in main music player layout</string>
</resources>