<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:circularflow_radiusInDP="3dp">


    <!--    For the floating bar we chose a card view -->

    <androidx.cardview.widget.CardView
        android:id="@+id/floating_bar_card_view"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--     inside that we add a constraint layout for better flexibility-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!--            inside the layout we add the image view for song title image-->

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-9dp"
                android:layout_marginTop="-6dp"
                android:layout_marginEnd="-7dp"
                android:progressDrawable="@drawable/custom_progress"
                android:thumb="@drawable/transparent_thumb"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/floating_bar_play_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/play_pause_button_desc"
                android:src="@drawable/ic_float_bar_pause_icon_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floating_bar_next_buttton"
                app:layout_constraintHorizontal_bias="0.78"
                app:layout_constraintStart_toEndOf="@+id/floating_bar_song_artist"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/floating_bar_song_imageview"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/todo"
                app:circularflow_radiusInDP="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533"
                app:srcCompat="@drawable/naruto_song"
                tools:ignore="ImageContrastCheck" />

            <!--            This text view is for song title-->
            <TextView
                android:id="@+id/floating_bar_song_title"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/ai_to_shu_hokages_furneral_from_naruto"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/floating_bar_song_imageview"
                app:layout_constraintTop_toTopOf="parent" />


            <!--            This textview is for songs artist name -->
            <TextView
                android:id="@+id/floating_bar_song_artist"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:text="@string/rmaster"
                app:layout_constraintStart_toEndOf="@+id/floating_bar_song_imageview"
                app:layout_constraintTop_toBottomOf="@+id/floating_bar_song_title" />

            <ImageButton
                android:id="@+id/floating_bar_next_buttton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next_button_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_float_bar_next_icon_dark"
                tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>